--- a/EventosWebApp/web/css/evento_card.css
+++ b/EventosWebApp/web/css/evento_card.css
@@ -12,12 +12,13 @@
     height: 430px;
     margin: 10px;
     padding: 10px;
-    border: darkgray solid 1px;
+    /*border: darkgray solid 1px;*/
     elevation: 50px;
     border-radius: 10px;
     display: inline-block;
     position: relative;
     box-shadow: 0 1px 3px rgba(0,0,0,0.16), 0 1px 3px rgba(0,0,0,0.23); 
+    alignment-adjust: auto; 
 }
 .evento-card:hover {
   box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
